--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,7 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Environment files for backend and frontend
+backend/.env
+frontend/.env
+
