--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,7 @@
-PORT=5000  
-NODE_ENV=development 
+PORT=5000
+NODE_ENV=development
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=devopslab
+DB_PORT=5432
