--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,20 @@
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["devops", "api", "express"],
+  "keywords": [
+    "devops",
+    "api",
+    "express",
+    "postgresql"
+  ],
   "author": "DevOpsLab Alpha",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.16.3",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
